[package]
name = "rust_lib_commet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
cpal = "0.17.3"
flutter_rust_bridge = "=2.11.1"
futures-util = "0.3.32"
livekit = { version = "0.7.32", features = ["rustls-tls-native-roots"] }
log = "0.4.29"
once_cell = "1.21.3"
rand = "0.10.0"
scap = "0.0.8"
tokio = "1.49.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
