[package]
name = "rust_lib_commet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
flutter_rust_bridge = "=2.11.1"
lazy_static = "1.5.0"
log = "0.4.29"
once_cell = "1.21.4"
serde = "1.0.228"
serde_json = "1.0.149"
stderrlog = "0.6.0"
tao = "0.34.6"
tokio = "1.50.0"
uuid = "1.23.0"
webrtc = "0.17.1"
wry = "0.54.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
